k8s/overlays/minikube/client-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
